<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login.CodeVerification">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/otp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/verification_code"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/verification_text"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <EditText
            android:id="@+id/phone_verification_1st_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/phone_verification_2nd_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/phone_verification_3rd_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/phone_verification_4th_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/phone_verification_5th_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

        <EditText
            android:id="@+id/phone_verification_6th_digit"
            style="@style/otp_edit_text"
            android:layout_width="50dp"
            android:layout_height="60dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_ripple_effect"
        android:gravity="center"
        android:text="@string/tracking"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>