<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login.ID">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layoutDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:backgroundTint="#F2F3F6"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="142dp"
                android:layout_height="142dp"
                android:layout_margin="4dp"
                app:cardCornerRadius="500dp">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/select_image"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/change_user_photo"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:backgroundTint="#F2F3F6"
                android:clickable="false"
                android:focusable="false"
                app:cardCornerRadius="50dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:focusable="false"
                    android:src="@drawable/camera" />
            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/first_name"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/components_height"
        android:layout_marginTop="50dp"
        android:hint="@string/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6" />

    <EditText
        android:id="@+id/last_name"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/components_height"
        android:layout_marginTop="@dimen/margin"
        android:hint="@string/last_name"
        app:layout_constraintEnd_toEndOf="@+id/first_name"
        app:layout_constraintStart_toStartOf="@+id/first_name"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <EditText
        android:id="@+id/farm_id"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="@dimen/components_height"
        android:hint="@string/id"
        app:layout_constraintEnd_toStartOf="@+id/qr_scanner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <ImageButton
        android:id="@+id/qr_scanner"
        android:layout_width="@dimen/components_height"
        android:layout_height="@dimen/components_height"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:background="@drawable/button_ripple_effect"
        android:gravity="center"
        android:src="@drawable/scanner_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getMain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/margin"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_ripple_effect"
        android:gravity="center"
        android:text="@string/tracking"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farm_id" />

</androidx.constraintlayout.widget.ConstraintLayout>