<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Master.MoreItemInfo">

    <TextView
        android:id="@+id/period_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintEnd_toStartOf="@+id/back"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/button_ripple_effect"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_ripple_effect"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/app_name"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back" />

    <TextView
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/margin"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/give"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/date_time"
        app:layout_constraintTop_toBottomOf="@+id/date_time" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:gravity="right"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_balance"
        app:layout_constraintTop_toBottomOf="@+id/label" />

    <ImageButton
        android:id="@+id/edit_balance"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_ripple_effect"
        android:backgroundTint="@color/account_filed"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/balance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/balance" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/account_filed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_balance" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/reason"
        android:textAlignment="center"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/reason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:textAlignment="inherit"
        android:textColor="@color/sonic_silver"
        android:textSize="@dimen/secondary_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toEndOf="@+id/edit_reason"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <ImageButton
        android:id="@+id/edit_reason"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_ripple_effect"
        android:backgroundTint="@color/account_filed"
        android:contentDescription="@string/app_name"
        android:src="@drawable/edit"
        app:layout_constraintBottom_toBottomOf="@+id/reason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reason" />

</androidx.constraintlayout.widget.ConstraintLayout>