<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/components_height"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/round_remove" />

        <LinearLayout
            android:id="@+id/select_type"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/margin"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_of_rent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/give"
                style="@style/focusable_clickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/margin_0.5"
                android:layout_weight="1"
                android:background="@drawable/gray_stroke">

                <CheckBox
                    android:id="@+id/give_checkbox"
                    style="@style/not_focusable_clickable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/not_focusable_clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/give"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/give_checkbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin"
                    android:src="@drawable/give_money"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/take"
                style="@style/focusable_clickable"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_0.5"
                android:layout_weight="1"
                android:background="@drawable/gray_stroke">

                <CheckBox
                    android:id="@+id/take_checkbox"
                    style="@style/not_focusable_clickable"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@drawable/checkbox"
                    android:button="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView1"
                    style="@style/not_focusable_clickable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/take"
                    android:textSize="@dimen/text_size"
                    app:layout_constraintBottom_toTopOf="@+id/take_checkbox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/margin"
                    android:src="@drawable/take_money"
                    app:layout_constraintBottom_toTopOf="@+id/textView1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <EditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reason"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:background="@drawable/input_filed"
            android:gravity="center"
            android:hint="@string/reason"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/components_height"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/complete_registration"
            android:textSize="@dimen/text_size" />

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>